Token Issue fixed!

--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
+    <!-- Corrected script import for 'preline' -->
+    <!-- <script type="module">
+      import 'preline';
+    </script> -->
   </head>
   <body>
     <div id="root"></div>
+    
+    <!-- Corrected main script import for React app -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
